pre-processing to work around a macro processing bug that has been
fixed upstream for some time but that some distro vendors have been
slow in applying.  See the following bug for more details:
https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=228215
----------------------------------------------------------------------
Wed May 16 15:05:58 2007                        Michael Jennings (mej)

Fix for RHEL4's RPM version from Jason Corley <jason.corley@gmail.com>
and fixed build arch.
----------------------------------------------------------------------
Mon May 21 19:13:04 2007                        Michael Jennings (mej)

Tweaks for rpm 4.4.9, new PHP extension template, reorg of
pkgrepotool.
----------------------------------------------------------------------
Tue May 22 14:42:21 2007                        Michael Jennings (mej)

Fleshed out the repository comparison stuff in pkgrepotool.  Not
super-thoroughly tested, but the testing I've done so far looks
*really* nice. :-)

Added get_backtrace() to supplement show_backtrace() for situations
where the trace is better provided in array form.

Refactored rpm_sort() comparison code into separate rpm_cmp() function
which can be used independently.
----------------------------------------------------------------------
Tue May 22 16:29:11 2007                        Michael Jennings (mej)

Using jbj's rpmeval.c as a starting point, I whipped up rpmcmp.c, a
quickie wrapper around rpmvercmp() based on my similar work done for
CLU.  Not as good as jbj could do, but it's a start.  Needs some
command line options and possibly a conversion to rpmds.  Works for
now though.
----------------------------------------------------------------------
Tue May 22 17:45:40 2007                        Michael Jennings (mej)

Switch from "clu cmp" to "rpmcmp" for version comparison pipe.

Begin work on repo merge.
----------------------------------------------------------------------